<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main2Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:background="@drawable/background"
                android:gravity="bottom"
                android:text="MATEMATIKA SEMESTER I"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="MATERI"/>

            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="6">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="@color/colorGrapeFruit"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/satu" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="20dp"
                            android:background="@color/colorGrapeFruitDark"
                            android:padding="8dp"
                            android:text="@string/bab1"
                            android:textAlignment="center"
                            android:textColor="@color/colorWhite"
                            android:textSize="10sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="@color/colorBitterSweet"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/dua" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="20dp"
                            android:background="@color/colorBitterSweetDark"
                            android:padding="8dp"
                            android:text="@string/bab2"
                            android:textAlignment="center"
                            android:textColor="@color/colorWhite"
                            android:textSize="10sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="@color/colorFlower"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/tiga" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:background="@color/colorFlowerDark"
                            android:padding="8dp"
                            android:text="@string/bab3"
                            android:textAlignment="center"
                            android:textColor="@color/colorWhite"
                            android:textSize="10sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:background="@color/colorBitterSweetDark"
                            android:padding="8dp"
                            android:text="@string/bab2"
                            android:textAlignment="center"
                            android:textColor="@color/colorWhite"
                            android:textSize="10sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="@color/colorFlower"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/tiga" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:background="@color/colorFlowerDark"
                            android:padding="8dp"
                            android:text="@string/bab3"
                            android:textAlignment="center"
                            android:textColor="@color/colorWhite"
                            android:textSize="10sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:background="@color/colorBitterSweetDark"
                            android:padding="8dp"
                            android:text="@string/bab2"
                            android:textAlignment="center"
                            android:textColor="@color/colorWhite"
                            android:textSize="10sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="@color/colorFlower"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/tiga" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:background="@color/colorFlowerDark"
                            android:padding="8dp"
                            android:text="@string/bab3"
                            android:textAlignment="center"
                            android:textColor="@color/colorWhite"
                            android:textSize="10sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:background="@color/colorBitterSweetDark"
                            android:padding="8dp"
                            android:text="@string/bab2"
                            android:textAlignment="center"
                            android:textColor="@color/colorWhite"
                            android:textSize="10sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="120dp"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:background="@color/colorFlower"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/tiga" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:background="@color/colorFlowerDark"
                            android:padding="8dp"
                            android:text="@string/bab3"
                            android:textAlignment="center"
                            android:textColor="@color/colorWhite"
                            android:textSize="10sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:background="@color/colorBitterSweetDark"
                            android:padding="8dp"
                            android:text="@string/bab2"
                            android:textAlignment="center"
                            android:textColor="@color/colorWhite"
                            android:textSize="10sp" />

                    </LinearLayout>

                </LinearLayout>

            </HorizontalScrollView>


            <!--row 2-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="SOAL - SOAL"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@color/colorGrapeFruit"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/satu"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/colorGrapeFruitDark"
                        android:text="@string/bab1"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="10sp"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@color/colorGrapeFruit"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/satu"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/colorGrapeFruitDark"
                        android:text="@string/bab1"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="10sp"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@color/colorGrapeFruit"
                    android:orientation="vertical"
                    >
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/satu"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/colorGrapeFruitDark"
                        android:text="@string/bab1"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="10sp"
                        />

                </LinearLayout>

            </LinearLayout>
            <!-- end of row 2 -->

        </LinearLayout>


    </ScrollView>

</LinearLayout>